fixed horizontal scroll issue

--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -4,7 +4,7 @@
 // SERVICES SECTION HERE
 
 .services {
-  margin: 60px 0px;
+  margin: 50px 0px;
 }
 
 .services .wrapper {
@@ -284,11 +284,61 @@
 }
 
 @media (max-width: 480px) {
+  .products .wrapper {
+    h2 {
+      position: static;
+    }
+    h2:before,
+    h2:after {
+      position: static;
+      top: 0%;
+      width: none;
+      height: none;
+    }
+    h2:before {
+      right: 0;
+      margin-right: 0px;
+    }
+    h2:after {
+      left: 0;
+      margin-left: 0px;
+    }
+    .filter-tabs {
+      li {
+        padding: 10px 10px;
+      }
+    }
+  }
+  .blog .wrapper {
+    h2 {
+      position: static;
+    }
+    h2:before,
+    h2:after {
+      position: static;
+      top: 0%;
+      width: none;
+      height: none;
+    }
+    h2:before {
+      right: 0;
+      margin-right: 0px;
+    }
+    h2:after {
+      left: 0;
+      margin-left: 0px;
+    }
+    .sub-heading {
+      text-align: center;
+      width: 100%;
+    }
+  }
+
   .posts {
     flex-direction: column;
-
+    margin-top: 0;
     .post {
-      margin-top: 30px;
+      margin-top: 20px;
       max-width: 100%;
       width: 100%;
       align-items: flex-start;
